[gd_scene load_steps=11 format=3 uid="uid://uqogtk7q00he"]

[ext_resource type="Script" path="res://addons/juice_my_editor/juice_my_editor_node.gd" id="1_3hgs1"]
[ext_resource type="AudioStream" uid="uid://iperybopdpps" path="res://addons/juice_my_editor/assets/press-01.wav" id="1_visqa"]
[ext_resource type="AudioStream" uid="uid://vnptpobx52wo" path="res://addons/juice_my_editor/assets/click_right_01.wav" id="2_cotqp"]
[ext_resource type="AudioStream" uid="uid://r4bify5il0kd" path="res://addons/juice_my_editor/assets/ui_key_scifi.wav" id="2_yfcpj"]

[sub_resource type="Gradient" id="Gradient_810ag"]
offsets = PackedFloat32Array(0, 0.798701, 0.88961, 1)
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 0.294737, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_7dx5e"]
gradient = SubResource("Gradient_810ag")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1, 0.5)

[sub_resource type="Animation" id="Animation_qv54k"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_ptecj"]
resource_name = "clicked"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 2),
"update": 0,
"values": [Vector2(0.25, 0.25), Vector2(1.5, 1.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 2),
"update": 0,
"values": [Color(1, 0.873327, 0, 1), Color(1, 0.226433, 0, 0)]
}
tracks/2/type = "audio"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("EventAudio")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("1_visqa")
}],
"times": PackedFloat32Array(0.05)
}
tracks/2/use_blend = true

[sub_resource type="Animation" id="Animation_k4l5y"]
resource_name = "clicked_right"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 2),
"update": 0,
"values": [Vector2(0.25, 0.25), Vector2(1.5, 1.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 2),
"update": 0,
"values": [Color(0.628268, 1, 0, 1), Color(0, 0.227268, 1, 0)]
}
tracks/2/type = "audio"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("EventAudio")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("2_cotqp")
}],
"times": PackedFloat32Array(0.05)
}
tracks/2/use_blend = true

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y15mi"]
_data = {
"RESET": SubResource("Animation_qv54k"),
"clicked": SubResource("Animation_ptecj"),
"clicked_right": SubResource("Animation_k4l5y")
}

[node name="JuiceMyEditor" type="Control"]
layout_mode = 3
anchors_preset = 0
mouse_filter = 2
script = ExtResource("1_3hgs1")

[node name="EventAudio" type="AudioStreamPlayer" parent="."]
volume_db = -16.0
max_polyphony = 8

[node name="KeyboardAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_yfcpj")
volume_db = -14.0
max_polyphony = 8

[node name="PressAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("1_visqa")
volume_db = -24.0
max_polyphony = 8

[node name="Sprite2D" type="Sprite2D" parent="."]
self_modulate = Color(1, 1, 1, 0)
texture = SubResource("GradientTexture2D_7dx5e")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_y15mi")
}
autoplay = "clicked"

[node name="KeyComboTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
